# tso_robotics_sockets

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.audit/inference_analysis/: route_audit.md
.github/workflows/: test.yml
src/tso_robotics_sockets/: __init__.py  base.py  client.py  compression.py  server.py
src/tso_robotics_sockets/messages/: __init__.py  inference.py  routes.py  stereo.py
tests/: conftest.py  test_base.py  test_client_server.py  test_compression.py
